{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 33,
  "lineage": "7dca702b-43d9-d874-a99a-019cfcf617c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e4ba81d75ebeb6a",
            "arn": "arn:aws:ec2:us-east-1:284511073088:instance/i-045454ec690e0eddc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globo-web-app-prod-nginx_profile",
            "id": "i-045454ec690e0eddc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b75a7a01524ec82",
            "private_dns": "ip-10-2-0-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.26",
            "public_dns": "ec2-54-146-199-161.compute-1.amazonaws.com",
            "public_ip": "54.146.199.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd6d01b1d9549ac4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f1acadbd62aa57a1",
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-nginx-0",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-nginx-0",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b454371b23aa1e3e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_security_group.sg1",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web-app-s3.aws_s3_bucket.web_bucket",
            "module.web-app-s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e4ba81d75ebeb6a",
            "arn": "arn:aws:ec2:us-east-1:284511073088:instance/i-06d279b580aff5fff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globo-web-app-prod-nginx_profile",
            "id": "i-06d279b580aff5fff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd95f73eebd30ce6",
            "private_dns": "ip-10-2-1-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.123",
            "public_dns": "ec2-54-166-185-42.compute-1.amazonaws.com",
            "public_ip": "54.166.185.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072cf06fe49a66d5d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0919ebc9723291ca1",
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-nginx-1",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-nginx-1",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b454371b23aa1e3e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_security_group.sg1",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web-app-s3.aws_s3_bucket.web_bucket",
            "module.web-app-s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globo-web-app-prod-60520",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:284511073088:loadbalancer/app/globo-web-app-prod-alb/5b2ddd3886fecd7e",
            "arn_suffix": "app/globo-web-app-prod-alb/5b2ddd3886fecd7e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-app-prod-alb-1414234608.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:284511073088:loadbalancer/app/globo-web-app-prod-alb/5b2ddd3886fecd7e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-app-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e4b9dbcadc359d7f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0919ebc9723291ca1"
              },
              {
                "subnet_id": "subnet-0f1acadbd62aa57a1"
              }
            ],
            "subnets": [
              "subnet-0919ebc9723291ca1",
              "subnet-0f1acadbd62aa57a1"
            ],
            "tags": {
              "Billing_code": "4234y95t2394",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "vpc_id": "vpc-02a16b9de3d7df765",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web-app-s3.aws_s3_bucket.web_bucket",
            "module.web-app-s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:284511073088:listener/app/globo-web-app-prod-alb/5b2ddd3886fecd7e/511f9e6d79fa7321",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:284511073088:targetgroup/globo-web-app-prod-lb-tg/789e694fb6beaad8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:284511073088:listener/app/globo-web-app-prod-alb/5b2ddd3886fecd7e/511f9e6d79fa7321",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:284511073088:loadbalancer/app/globo-web-app-prod-alb/5b2ddd3886fecd7e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-alb",
            "aws_lb_target_group.test",
            "aws_security_group.alb",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web-app-s3.aws_s3_bucket.web_bucket",
            "module.web-app-s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:284511073088:targetgroup/globo-web-app-prod-lb-tg/789e694fb6beaad8",
            "arn_suffix": "targetgroup/globo-web-app-prod-lb-tg/789e694fb6beaad8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:284511073088:targetgroup/globo-web-app-prod-lb-tg/789e694fb6beaad8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "globo-web-app-prod-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:284511073088:targetgroup/globo-web-app-prod-lb-tg/789e694fb6beaad8-20241213064057949300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:284511073088:targetgroup/globo-web-app-prod-lb-tg/789e694fb6beaad8",
            "target_id": "i-045454ec690e0eddc"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_instance.nginx",
            "aws_lb_target_group.test",
            "aws_security_group.sg1",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web-app-s3.aws_s3_bucket.web_bucket",
            "module.web-app-s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:284511073088:targetgroup/globo-web-app-prod-lb-tg/789e694fb6beaad8-20241213064057985700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:284511073088:targetgroup/globo-web-app-prod-lb-tg/789e694fb6beaad8",
            "target_id": "i-06d279b580aff5fff"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_instance.nginx",
            "aws_lb_target_group.test",
            "aws_security_group.sg1",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web-app-s3.aws_s3_bucket.web_bucket",
            "module.web-app-s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:security-group/sg-0e4b9dbcadc359d7f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4b9dbcadc359d7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "albsg",
            "name_prefix": "",
            "owner_id": "284511073088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing_code": "4234y95t2394",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:security-group/sg-0b454371b23aa1e3e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b454371b23aa1e3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globo-web-app-prod-terratest",
            "name_prefix": "",
            "owner_id": "284511073088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing_code": "4234y95t2394",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:network-acl/acl-0d6d9ae1c5cccf05e",
            "default_network_acl_id": "acl-0d6d9ae1c5cccf05e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d6d9ae1c5cccf05e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "284511073088",
            "subnet_ids": [
              "subnet-0919ebc9723291ca1",
              "subnet-0f1acadbd62aa57a1"
            ],
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-default",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-default",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:route-table/rtb-06ae86ae237138b94",
            "default_route_table_id": "rtb-06ae86ae237138b94",
            "id": "rtb-06ae86ae237138b94",
            "owner_id": "284511073088",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-default",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-default",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:security-group/sg-0ca6c60f212ebffe7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ca6c60f212ebffe7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "284511073088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-default",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-default",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:internet-gateway/igw-003ea53b26ecd2034",
            "id": "igw-003ea53b26ecd2034",
            "owner_id": "284511073088",
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003ea53b26ecd2034",
            "id": "r-rtb-00c7d3f7cb44a7e911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c7d3f7cb44a7e91",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:route-table/rtb-00c7d3f7cb44a7e91",
            "id": "rtb-00c7d3f7cb44a7e91",
            "owner_id": "284511073088",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003ea53b26ecd2034",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-public",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-public",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048a7179eb1393db1",
            "route_table_id": "rtb-00c7d3f7cb44a7e91",
            "subnet_id": "subnet-0f1acadbd62aa57a1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069f9e1ea5221bebb",
            "route_table_id": "rtb-00c7d3f7cb44a7e91",
            "subnet_id": "subnet-0919ebc9723291ca1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:subnet/subnet-0f1acadbd62aa57a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1acadbd62aa57a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "284511073088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-public-us-east-1a",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-public-us-east-1a",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:subnet/subnet-0919ebc9723291ca1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0919ebc9723291ca1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "284511073088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-public-us-east-1b",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc-public-us-east-1b",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "vpc_id": "vpc-02a16b9de3d7df765"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284511073088:vpc/vpc-02a16b9de3d7df765",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0d6d9ae1c5cccf05e",
            "default_route_table_id": "rtb-06ae86ae237138b94",
            "default_security_group_id": "sg-0ca6c60f212ebffe7",
            "dhcp_options_id": "dopt-060c0a3a148018e31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a16b9de3d7df765",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ae86ae237138b94",
            "owner_id": "284511073088",
            "tags": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            },
            "tags_all": {
              "Billing_code": "4234y95t2394",
              "Name": "globo-web-app-prod-my-vpc",
              "company": "Globomantics",
              "project": "Globomantics-ACC42345NIDWB"
            }
          }
        }
      ]
    }
  ]
}